  * Modify the configure script check for the webp delegate library (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23025).
  * The -blur, -guassian-blur, and -sharpen are now convenience methods
    for -morphology convolve.
  * Fix infinite loop for 'display -window' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23028).

2013-03-18  6.8.3-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-10, SVN revision 11413.

2013-03-15  6.8.3-10 Glenn Randers-Pehrson <glennrp@image...>
  * Added IM, libpng, and zlib version info to debug output.

2013-03-10  6.8.3-10 Bastien Roucaries  <roucaries.basti...>
  * Move PerlMagick arch independant part to 'default' folder.
  * Move binaries to lib subdirectory and link are created from binary package.

2013-03-10  6.8.3-10 Cristy  <quetzlzacatenango@image...>
  * The TXT image format can now generate output compatible with the
    -sparse-color option (e.g. convert image.png sparse-color:image.txt).
  * Support -intensity option: method to generate an intensity value from a
    pixel.
  * Add -similarity-threshold option to the compare utility, the minimum
    distortion for a (sub)image match.
  * Avoid seq-fault in AcquireQuantumInfo() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22973).
  * Comment resource initializers in magick/resource.c.

2013-03-10  6.8.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-9, SVN revision 11294.

2013-03-09  6.8.3-9 Cristy  <quetzlzacatenango@image...>
  * Add a space after the LastPage option in coders/ps.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22940).

2013-03-08  6.8.3-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-8, SVN revision 11283.

2013-03-05  6.8.3-8 Cristy  <quetzlzacatenango@image...>
  * GIF comments are no longer displaced by 1 for animated GIFs (reference